Updated heap size to max performance.